# micro-admin-videos-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/__seedwork/application/: dto.py  use_cases.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_int_validators.py
src/__seedwork/tests/unit/application/: test_unit_dto.py  test_unit_use_case.py
src/__seedwork/tests/unit/domain/: test_unit_entity.py  test_unit_respositories.py  test_unit_validators.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/application/: test_unit_dto.py  test_unit_use_cases.py
src/category/tests/infra/: test_unit_repositories.py
src/category/tests/integration/: test_int_entities.py
src/category/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py
