[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Diego Garcia", email = "diegovianagarcia@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.13.1",
    "pytest-cov>=3.0.0",
]
requires-python = ">=3.10.2"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.14.5",
    "pytest>=7.1.2",
]
[tool.pdm.scripts]
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "__pypackages__",
    ".pytest_cache"
]



